# quickosdl

./: Cargo.toml  README.md  go.mod  go.sum
.github/: preview.tape
.github/workflows/: preview.yml  release.yml
cmd/: main.go
internal/fetch/: fetch.go
internal/tui/: arch.go  dl.go  dlprompt.go  filePicker.go  option.go  os.go  tui.go  urldisplay.go
src/: app.rs  arch_selection.rs  complete.rs  download.rs  download_options.rs  edition_selection.rs  error_display.rs  keybinds.rs  main.rs  os_selection.rs  release_selection.rs  searchable_list.rs  url_list.rs
