[package]
name = "quickosdl"
version = "0.3.1"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
itertools = "0.14.0"
md-5 = "0.10.6"
quickget_core = { git = "https://github.com/lj3954/quickemu-rs" }
ratatui = "0.29.0"
reqwest = { version = "0.12.12", default-features = false, features = [
    "blocking",
    "rustls-tls",
] }
sha1 = "0.10.6"
sha2 = "0.10.8"
size = "0.4.1"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread"] }
